--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 			<span onclick="despliegueMenuHeader('')" id="desplegableHeader" class="flex flex-col items-center justify-center w-full hover:translate-y-2 duration-500 delay-75 ease-out sm:hidden">
 			<img src="./multimedia/navlist.png" alt="img" class="w-8 mb-2" id="nav__list" >
 			</span>
-			<ul class="hidden flex-col justify-center items-center w-full bg-slate-900 text-teal-50 font-medium translate-y-3 shadpe  shadow-[0px_10px_12px_0px_rgba(0,0,0,0.75)_inset] sm:flex sm:flex-row sm:justify-end sm:m-0 p-0 sm:bg-inherit sm:shadow-none sm:mr-5 sm:items-baseline" id="menuHeader">
+			<ul class="hidden flex-col justify-center items-center w-full bg-slate-900 text-teal-50 font-medium translate-y-3 shadpe  shadow-[0px_10px_12px_0px_rgba(0,0,0,0.75)_inset] sm:flex sm:flex-row sm:justify-end sm:m-0 p-0 sm:bg-inherit sm:shadow-none sm:mr-5 sm:items-baseline lg:font-normal" id="menuHeader">
 				<li class="m-1 mt-6 sm:m-0 sm:ml-4">
 					<a href="./index.html" class="text-white hover:text-cyan-500 hover:text-lg sm:text-lg">Inicio</a>
 				</li>
@@ -44,108 +44,96 @@
 		<section class="flex flex-col mt-36">
 			<div class="flex flex-col items-center justify-center mb-2">
 				<img src="./multimedia/developer.jpg" alt="Imagen de desarrollo" class="w-40 h-40 object-cover rounded-full my-3 hover:scale-125 duration-500 delay-75 hover:rounded-none ease-out sm:rounded-3xl">
-				<h1 class="text-center text-xl font-bold font-sans text-cyan-400 my-1 sm:text-2xl">Desarrollador Front-end</h1>
-				<p class="text-center text-lg text-white  my-1 sm:text-xl" >Experiencia en el desarrollo de interfaces WEB</p>
+				<h1 class="text-center text-xl font-bold font-sans text-cyan-400 my-1 sm:text-2xl lg:font-normal lg:text-3xl">Desarrollador Front-end</h1>
+				<p class="text-center text-lg text-white  my-1 sm:text-xl lg:font-normal lg:text-2xl" >Experiencia en el desarrollo de interfaces WEB</p>
 			</div>
-			<div class="flex flex-col w-full my-3 sm:items-center sm:bg-color-secundary lg:bg-inherit lg:items-start">
-				<p class="text-cyan-300 text-lg font-semibold mx-4 sm:text-2xl sm:text-center sm:my-6">Experiencias con intelecto profesional y creativo</p>
-				<img src="./multimedia/vscode.jpg" alt="imagen de interfas de vscode" class="w-full my-4 shadow-[-1px_0px_14px_1px_rgba(0,0,0,0.75)] max-w-md sm:object-cover sm:w-full sm:h-auto ">
+			<div class="flex flex-col w-full my-3 items-center sm:bg-color-secundary lg:bg-inherit lg:items-start">
+				<p class="text-cyan-300 text-lg font-semibold mx-4 sm:text-2xl sm:text-center sm:my-6 lg:text-3xl lg:font-normal">Experiencias con intelecto profesional y creativo</p>
+				<div class="lg:flex lg:flex-row lg:justify-between lg:items-start lg:w-full">
+					<img src="./multimedia/vscode.jpg" alt="imagen de interfas de vscode" class="w-full my-4 shadow-[-1px_0px_14px_1px_rgba(0,0,0,0.75)] max-w-md sm:object-cover sm:w-full sm:h-auto lg:ml-4 ">
+					<p class="hidden lg:flex lg:justify-end lg:justify-items-start lg:text-4xl lg:text-right lg:text-white lg:mx-4 lg:mt-14">Experiencia en optimos entornos de desarrollo y tecnologias actuales</p>
+				</div>
 			</div>
     	</section>
-        <section class="flex flex-col shadow-[-1px_0px_14px_1px_rgba(0,0,0,0.75)]">
-            <h2 class="text-cyan-300 text-2xl font-medium mx-3 mt-9 sm:text-2xl sm:ml-16">Los atributos que me caracterizan </h2>
-        	<div class="flex flex-wrap w-full justify-center my-6">
+        <section class="flex flex-col  justify-center shadow-[-1px_0px_14px_1px_rgba(0,0,0,0.75)]">
+            <h2 class="text-cyan-300 text-2xl font-medium mx-3 mt-9 sm:text-2xl sm:ml-16 lg:text-3xl">Los atributos que me caracterizan </h2>
+        	<div class="flex flex-wrap w-full justify-center items-center my-6 lg:h-72 lg:m-0">
             	<div class="flex flex-col items-center m-5 w-28 text-center hover:scale-125 duration-300 ease-out">
-                	<img src="./multimedia/html5.png" class="w-16 ">
+                	<img src="./multimedia/html5.png" class="w-16">
                 	<p class="text-xl text-cyan-100 font-semibold ">Html 5
                 	</p>
-                	<p class="hidden">describcion de los atributos Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                	tempor incididunt ut labore et dolorbe magna aliqua.
-               		</p>
             	</div>
 				<div class="flex flex-col items-center m-5 w-28 text-center hover:scale-125 duration-300 ease-out">
                 	<img src="./multimedia/css3.png" class="w-16">
                 	<p class="text-xl  text-cyan-100 font-semibold">Css 3 
                 	</p>
-                	<p class="hidden">describcion de los atributos Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                	tempor incididunt ut labore et dolore magna aliqua.
-               		</p>
             	</div>
 				<div class="flex flex-col items-center m-5 w-28 text-center hover:scale-125 duration-300 ease-out">
                 	<img src="./multimedia/Javascript.png" class="w-16">
                 	<p class="text-xl  text-cyan-100 font-semibold">JavaScript 
                 	</p>
-                	<p class="hidden">describcion de los atributos Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                	tempor incididunt ut labore et dolore magna aliqua.
-               		</p>
             	</div>				
 				<div class="flex flex-col items-center m-5 w-28 text-center hover:scale-125 duration-300 ease-out">
                 	<img src="./multimedia/python.png" class="w-16">
                 	<p class="text-xl  text-cyan-100 font-semibold">Python 
                 	</p>
-                	<p class="hidden">describcion de los atributos Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                	tempor incididunt ut labore et dolore magna aliqua.
-               		</p>
             	</div>
 				<div class="flex flex-col items-center m-5 w-28 text-center hover:scale-125 duration-300 ease-out">
                 	<img src="./multimedia/github.png" class="w-16">
                 	<p class="text-xl  text-cyan-100 font-semibold">Git & Github 
                 	</p>
-                	<p class="hidden">describcion de los atributos Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                	tempor incididunt ut labore et dolore magna aliqua.
-               		</p>
             	</div>
 				<div class="flex flex-col items-center m-5 w-28 text-center hover:scale-125 duration-300 ease-out">
                 	<img src="./multimedia/tailwindLogo.png" class="w-16">
                 	<p class="text-xl  text-cyan-100 font-semibold">Tailwind css
                 	</p>
-                	<p class="hidden">describcion de los atributos Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                	tempor incididunt ut labore et dolore magna aliqua.
-               		</p>
             	</div>
 				
 			</div>
 			</section>
 		
 			<article class="flex flex-col py-11 mb-3 mt-0 justify-center bg-color-secundary shadow-[-1px_0px_14px_1px_rgba(0,0,0,0.75)]">
-				<h5 class="mx-5 my-3 text-xl text-white font-semibold sm:text-2xl sm:text-right mr-10">Algunos de los proyectos que he realizado</h5>
-				<div class="flex flex-col justify-center sm:flex-wrap sm:flex-row">
-					<div class="flex flex-col justify-center relative my-6 max-w-md sm:mt-10">
+				<h5 class="mx-5 my-3 text-xl text-white font-semibold sm:text-2xl sm:text-right mr-10 lg:text-3xl lg:m-4 lg:font-normal">Algunos de los proyectos que he realizado</h5>
+				<div class="flex flex-col justify-center items-center flex-wrap sm:flex-row">
+					<div class="flex flex-col justify-center relative my-6 max-w-md  xl:w-80">
 						<a href="./index.html" target="_blank" class="flex justify-center w-full">
-							<img src="./multimedia/proyectos/batabitss.png" alt="foto del proyecto" class="w-11/12 p-3 border-2 border-cyan-500 rounded-lg hover:w-full duration-300 ease-linear hover:p-0 hover:border-0 hover:rounded-none ">
+							<img src="./multimedia/proyectos/batabitss.png" alt="foto del proyecto" class="w-11/12 p-3 border-2 border-cyan-500 rounded-lg hover:w-full duration-300 ease-linear hover:p-0 hover:border-0 hover:rounded-none xl:hover:scale-150 xl:hover:translate-x-9 xl:hover:z-50">
 						</a>
 						<p class="flex justify-around bg-color-secundary rounded-lg text-white text-center text-sm font-medium p-1   box-border border-2 border-cyan-500 absolute -bottom-5 left-5 sm:text-base">Batabit</p>
 					</div>
-					<div class="flex flex-col justify-center relative my-6 max-w-md">
+					<div class="flex flex-col justify-center relative my-6 max-w-md xl:w-80">
 						<a href="./index.html" target="_blank" class="flex justify-center w-full">
-						<img src="./multimedia/proyectos/doctorwebss.png" alt="foto del proyecto" class="w-11/12 p-3 border-2  border-cyan-500 rounded-lg hover:w-full duration-300 ease-linear hover:p-0 hover:border-0 hover:rounded-none ">
+						<img src="./multimedia/proyectos/doctorwebss.png" alt="foto del proyecto" class="w-11/12 p-3 border-2  border-cyan-500 rounded-lg hover:w-full duration-300 ease-linear hover:p-0 hover:border-0 hover:rounded-none xl:hover:scale-150 xl:hover:z-50">
 						</a>
 						<p class="flex justify-around bg-color-secundary rounded-lg text-white text-center text-sm font-medium p-1   box-border border-2 border-cyan-500 absolute -bottom-5 left-5 sm:text-base">Doctorweb</p>
 					</div>
-					<div class="flex flex-col justify-center relative my-6 max-w-md">
+					<div class="flex flex-col justify-center relative my-6 max-w-md xl:w-80">
 						<a href="./index.html" target="_blank" class="flex justify-center w-full">
-						<img src="./multimedia/proyectos/googlecloness.png" alt="foto del proyecto" class="w-11/12 p-3 border-2  border-cyan-500 rounded-lg hover:w-full duration-300 ease-linear hover:p-0 hover:border-0 hover:rounded-none ">
+						<img src="./multimedia/proyectos/googlecloness.png" alt="foto del proyecto" class="w-11/12 p-3 border-2  border-cyan-500 rounded-lg hover:w-full duration-300 ease-linear hover:p-0 hover:border-0 hover:rounded-none xl:hover:scale-150 xl:hover:z-50">
 						</a>
 						<p class="flex justify-around bg-color-secundary rounded-lg text-white text-center text-sm font-medium p-1   box-border border-2 border-cyan-500 absolute -bottom-5 left-5 sm:text-base">Google clon</p>
 					</div>
-					<div class="flex flex-col justify-center relative my-6 max-w-md">
+					<div class="flex flex-col justify-center relative my-6 max-w-md xl:w-80">
 						<a href="./index.html" target="_blank" class="flex justify-center w-full">
-						<img src="./multimedia/proyectos/tuamigass.png" alt="foto del proyecto" class="w-11/12 p-3 border-2  border-cyan-500 rounded-lg hover:w-full duration-300 ease-linear hover:p-0 hover:border-0 hover:rounded-none ">
+						<img src="./multimedia/proyectos/tuamigass.png" alt="foto del proyecto" class="w-11/12 p-3 border-2  border-cyan-500 rounded-lg hover:w-full duration-300 ease-linear hover:p-0 hover:border-0 hover:rounded-none xl:hover:scale-150 xl:hover:-translate-x-9  xl:hover:z-50">
 						</a>
 						<p class="flex justify-around bg-color-secundary rounded-lg text-white text-center text-sm font-medium p-1   box-border border-2 border-cyan-500 absolute -bottom-5 left-5 sm:text-base">Tu amiga</p>
 					</div>
 				</div>
 			</article>
-			<section class="flex justify-center align-center bg-color-secundary p-6 my-14 shadow-[-1px_0px_14px_1px_rgba(0,0,0,0.75)] lg:justify-end">
+			<section class="flex justify-center items-center bg-color-secundary p-6 my-14 shadow-[-1px_0px_14px_1px_rgba(0,0,0,0.75)]">
+			<div class="w-full flex justify-center items-center lg:flex-row lg:justify-start" >
+				<p class="hidden lg:flex lg:text-4xl lg:text-white lg:font-light">Escribeme para saber que estas interesado en mis habilidades, con mucho gusto me comunicare contigo</p>
 				<div class="flex flex-col justify-center items-center w-full m-3 border-2 p-6 border-cyan-500 rounded-lg max-w-md">
-				<h3 class="text-white font-semibold text-2xl">Contacto</h4>
-				<form class="flex flex-col items-center w-full relative">
-						<input type="text" name="Nombre" id="nombre_form" placeholder="Nombre" class="w-full h-10 my-2 rounded-lg px-3 bg-purple-900 border-2 border-slate-900 placeholder:text-white  placeholder:font-medium">
-						<input type="email" name="Email" id="email_form" placeholder="Tu correo electronico" class="w-full h-10 my-2 rounded-lg px-3 bg-purple-900 border-2 border-slate-900 placeholder:text-white placeholder:font-medium">
-                        <input type="text" name="Descripcion" id="description_form" placeholder="Descripcion del servicio que estas nesecitando" class="w-full h-28 my-2 rounded-lg px-3 bg-purple-900 border-2 border-slate-900 placeholder:text-white placeholder:font-medium">
-						<input type="submit" name="submit" id="submit_form" class="w-1/2 h-8 my-3 bg-color-secundary rounded-lg text-lg text-white absolute -bottom-14 border-2 border-cyan-500 hover:scale-110 duration-300 ease-linear">
-				</form>
+					<h3 class="text-white font-semibold text-2xl lg:font-normal">Contacto</h4>
+					<form class="flex flex-col items-center w-full relative">
+							<input type="text" name="Nombre" id="nombre_form" placeholder="Nombre" class="w-full h-10 my-2 rounded-lg px-3 bg-purple-900 border-2 border-slate-900 placeholder:text-white  placeholder:font-medium">
+							<input type="email" name="Email" id="email_form" placeholder="Tu correo electronico" class="w-full h-10 my-2 rounded-lg px-3 bg-purple-900 border-2 border-slate-900 placeholder:text-white placeholder:font-medium">
+                        	<input type="text" name="Descripcion" id="description_form" placeholder="Descripcion del servicio que estas nesecitando" class="w-full h-28 my-2 rounded-lg px-3 bg-purple-900 border-2 border-slate-900 placeholder:text-white placeholder:font-medium">
+							<input type="submit" name="submit" id="submit_form" class="w-1/2 h-8 my-3 bg-color-secundary rounded-lg text-lg text-white absolute -bottom-14 border-2 border-cyan-500 hover:scale-110 duration-300 ease-linear lg:font-light">
+					</form>
 				</div>
+			</div>
 			</section>
 			<aside class="flex flex-col justify-center items-center w-16 h-16 fixed top-56 right-1 rounded-full hover:bg-color-secundary hover:border-2 hover:border-cyan-600 hover:-translate-x-1  duration-300 ease-linear sm:w-20 sm:h-20"  onclick="despliegueMenuAside('')">
 				<div class="relative flex flex-col justify-center items-center">
