cambios al html para subir a githun

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 	<main>
 		<section class="flex flex-col mt-36">
 			<div class="flex flex-col items-center justify-center mb-2">
-				<img src="./multimedia/developer.jpg" alt="Imagen de desarrollo" class="w-40 h-40 object-cover rounded-full my-3 hover:scale-125 duration-500 delay-75 hover:rounded-none ease-out sm:rounded-3xl">
+				<img src="./multimedia/developer.jpg" alt="Imagen de desarrollo" class="w-40 h-40 object-cover rounded-full my-3 hover:scale-125 ease-out duration-500 delay-75 hover:rounded-none">
 				<h1 class="text-center text-xl font-bold font-sans text-cyan-400 my-1 sm:text-2xl lg:font-normal lg:text-3xl">Desarrollador Front-end</h1>
 				<p class="text-center text-lg text-white  my-1 sm:text-xl lg:font-normal lg:text-2xl" >Experiencia en el desarrollo de interfaces WEB</p>
 			</div>
